--- a/project-tools/nginx/servers/zheng-ui.conf
+++ b/project-tools/nginx/servers/zheng-ui.conf
@@ -2,7 +2,7 @@ server {
         listen 1000 default;
         server_name  localhost;
 	location / {
-		root   F:/GitHub/zheng/zheng-ui/;
+		root   D:/Idea_Projects/Git/zheng/zheng/zheng-ui/;
 		index  index.html index.htm;
 		add_header Access-Control-Allow-Origin *;
 	}
